syntax = "proto3";
package hmf.v1;

message Ack {
  AckStatus status = 1;
  string detail    = 2;
}

message Result {
  ResultStatus status = 1;
  string detail       = 2;
}

enum AckStatus {
  ACK_STATUS_UNSPECIFIED = 0;
  ACK_RECEIVED           = 1;
  ACK_REJECTED           = 2;
}

enum ResultStatus {
  RESULT_STATUS_UNSPECIFIED = 0;
  RESULT_STATUS_COMPLETED   = 1;
  RESULT_STATUS_APPLIED     = 2;
  RESULT_STATUS_REJECTED    = 3;
  RESULT_STATUS_FAILED      = 4;
}
