syntax = "proto3";
package hmf.v1;

import "common.proto";

message Engineering {
  oneof payload {
    EngineeringRequest request = 1;
    Ack                ack     = 2;
    EngineeringResult  result  = 3;
  }
}

message EngineeringRequest {
  string request_id = 1;
  string action     = 2;
  string target     = 3;

  map<string, string> params = 4;

  bytes blob = 5;

  bool requires_confirmation = 6;
}

message EngineeringResult {
  ResultStatus status = 1;
  string       detail = 2;

  map<string, string> outputs = 3;

  bytes blob = 4;
}
