syntax = "proto3";
package hmf.v1;

message Telemetry {
  oneof payload {
    LifecycleBirth     birth       = 1;
    LifecycleHeartbeat heartbeat   = 2;
    LifecycleDeath     death       = 3;
    StateUpdate        state       = 4;
    Alarm              alarm       = 5;
    Observation        observation = 6;
  }
}

message LifecycleBirth {
  string vendor = 1;
  string model  = 2;
  string serial = 3;
  string hw_rev = 4;
  string fw_rev = 5;

  uint64 uptime_ms = 6;

  repeated string capabilities = 7;
}

message LifecycleHeartbeat {
  uint64 uptime_ms = 1;
  Health health    = 2;
}

message LifecycleDeath {
  DeathReason reason    = 1;
  uint64      uptime_ms = 2;
  string      detail    = 3;
}

enum DeathReason {
  DEATH_REASON_UNSPECIFIED = 0;
  GRACEFUL_SHUTDOWN        = 1;
  REBOOT                   = 2;
  SECURITY_QUARANTINE      = 3;
  FATAL_ERROR              = 4;
}

enum Health {
  HEALTH_UNSPECIFIED = 0;
  HEALTH_OK          = 1;
  HEALTH_DEGRADED    = 2;
  HEALTH_FAULT       = 3;
  HEALTH_CRITICAL    = 4;
}

message StateUpdate {
  uint64 local_seq = 1;

  repeated StateItem items = 2;
}

message StateItem {
  string key  = 1;
  string unit = 2;

  Quality quality = 3;

  oneof value {
    double f64  = 10;
    int64  i64  = 11;
    uint64 u64  = 12;
    bool   b    = 13;
    string s    = 14;
    bytes  blob = 15;
  }
}

enum Quality {
  QUALITY_UNSPECIFIED = 0;
  QUALITY_GOOD        = 1;
  QUALITY_UNCERTAIN   = 2;
  QUALITY_BAD         = 3;
  QUALITY_STALE       = 4;
}

message Alarm {
  AlarmSeverity severity = 1;
  string        code     = 2;
  string        summary  = 3;
  string        detail   = 4;

  string related_key        = 5;
  string recommended_action = 6;
}

enum AlarmSeverity {
  ALARM_SEVERITY_UNSPECIFIED = 0;
  ALARM_INFO                 = 1;
  ALARM_WARNING              = 2;
  ALARM_ERROR                = 3;
  ALARM_CRITICAL             = 4;
}

message Observation {
  Subject         subject = 1;
  ObservationType type    = 2;

  uint32 confidence_pct = 3;
  string summary        = 4;
  string detail         = 5;
}

message Subject {
  string subject_id = 1;
}

enum ObservationType {
  OBSERVATION_TYPE_UNSPECIFIED = 0;
  LINK_DOWN                    = 1;
  LINK_UP                      = 2;
  HEARTBEAT_MISSED             = 3;
  POWER_LOSS                   = 4;
  POWER_RESTORED               = 5;
  UNEXPECTED_DEVICE_SEEN       = 6;
}